[gd_scene load_steps=10 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/power_ups_manager/power_up/power_up.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.77037, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 60.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
scale = 3.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.444444, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 400.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 100.0
scale = 3.0
color_ramp = SubResource( 6 )

[node name="PowerUp" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 8
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="LifeParticle" type="Particles2D" parent="."]
z_index = -1
emitting = false
lifetime = 1.5
process_material = SubResource( 4 )

[node name="ExplodeParticle" type="Particles2D" parent="."]
emitting = false
amount = 50
lifetime = 0.4
one_shot = true
explosiveness = 1.0
process_material = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
